# wolf

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  85-wolf.rules  CMakeLists.txt  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  gpu-drivers.Dockerfile  gstreamer.Dockerfile
apps/: CMakeLists.txt  wolf.cpp
apps/helpers/log/: logger.cpp
apps/helpers/rest/: endpoints.cpp  helpers.cpp  servers.cpp  x509.cpp
apps/helpers/state/: data-structures.hpp  pair.cpp
apps/rest/: endpoints.cpp  helpers.cpp  servers.cpp  x509.cpp
apps/state/: data-structures.hpp
gst-plugin-wayland-display/: Cargo.toml
gst-plugin-wayland-display/src/: lib.rs  utils.rs
gst-plugin-wayland-display/src/protocols/: wl_drm.rs
gst-plugin-wayland-display/src/waylandsrc/: comp.rs  imp.rs  mod.rs
gst-plugin-wayland-display/src/waylandsrc/comp/: focus.rs  input.rs  window.rs
src/: CMakeLists.txt  aes.cpp  crypto.cpp  moonlight.cpp
src/api-server/: api-server.sln
src/api-server/.config/: dotnet-tools.json
src/api-server/api-server/: Program.cs  api-server.csproj  api-server.http
src/api-server/api-server/Controllers/: ContainerImagesController.cs  SessionsController.cs  UsersController.cs
src/api-server/api-server/Data/: CommonDataMemory.cs
src/api-server/api-server/Data/Interfaces/: ICommonData.cs
src/api-server/api-server/Models/: ContainerImage.cs  Session.cs  User.cs
src/api-server/api-server/Properties/: launchSettings.json
src/audio/: CMakeLists.txt
src/audio/audio/: audio.hpp
src/core/: CMakeLists.txt
src/core/rust/gst-wayland-display/include/: waylanddisplay.h
src/core/src/core/: api.hpp  audio.hpp  docker.hpp  gstreamer.hpp  input.hpp  virtual-display.hpp
src/crypto/: CMakeLists.txt  aes.cpp  sign.cpp  utils.cpp  utils.hpp
src/crypto/crypto/: crypto.hpp  utils.hpp
src/crypto/src/: aes.cpp  aes.hpp  crypto.cpp  sign.cpp  sign.hpp  utils.cpp  x509.cpp
src/docker/: CMakeLists.txt
src/docker/docker/: docker.cpp  docker.hpp  formatters.hpp  json_formatters.hpp
src/fake-udev/: CMakeLists.txt  fake-udev-cli.cpp
src/fake-udev/fake-udev/: MurmurHash2.cpp  MurmurHash2.h  fake-udev.hpp
src/fake-uinput/: CMakeLists.txt  fake-uinput.cpp
src/frontend/: .gitignore  README.md  backend-config.ts  package.json  tsconfig.json
src/frontend/public/: index.html
src/frontend/src/: App.test.tsx  App.tsx  app.css  index.tsx
src/frontend/src/app/: store.ts
src/helpers/: CMakeLists.txt
src/helpers/helpers/: logger.hpp  utils.hpp
src/input/: CMakeLists.txt
src/input/input/: input.hpp
src/moonlight/: CMakeLists.txt  moonlight.cpp
src/moonlight-protocol/: CMakeLists.txt  moonlight.cpp
src/moonlight-protocol/crypto/: CMakeLists.txt
src/moonlight-protocol/crypto/crypto/: crypto.hpp
src/moonlight-protocol/crypto/src/: aes.hpp  crypto.cpp  x509.cpp
src/moonlight-protocol/moonlight/: control.hpp  data-structures.hpp  fec.hpp  protocol.hpp
src/moonlight-protocol/nanors/: rswrapper.c  rswrapper.h
src/moonlight-protocol/rtsp/: parser.hpp
src/moonlight-server/: CMakeLists.txt  wolf.cpp
src/moonlight-server/api/: api.cpp  api.hpp  endpoints.cpp  http_server.hpp  openapi.cpp  unix_socket_server.cpp
src/moonlight-server/control/: control.cpp  control.hpp  input_handler.cpp  input_handler.hpp
src/moonlight-server/events/: events.hpp  reflectors.hpp
src/moonlight-server/exceptions/: exceptions.h
src/moonlight-server/gst-plugin/: CMakeLists.txt  README.md  audio.hpp  gstrtpmoonlightpay_audio.cpp  gstrtpmoonlightpay_video.cpp  gsttracy.cpp  gsttracy.hpp  utils.hpp  video.hpp
src/moonlight-server/rest/: custom-https.cpp  endpoints.hpp  rest.hpp  servers.cpp
src/moonlight-server/rest/html/: pin.html  pin.include.html
src/moonlight-server/rtp/: udp-ping.cpp  udp-ping.hpp
src/moonlight-server/rtsp/: commands.hpp  net.hpp
src/moonlight-server/runners/: child_session.cpp  child_session.hpp  docker.cpp  docker.hpp  process.cpp  process.hpp
src/moonlight-server/state/: config.hpp  configTOML.cpp  data-structures.hpp  serialised_config.hpp  sessions.hpp
src/moonlight-server/state/default/: config.include.toml  config.v2.toml  config.v3.toml  config.v4.toml
src/moonlight-server/streaming/: data-structures.hpp  streaming.cpp  streaming.hpp
src/moonlight/moonlight/: config.hpp  control.hpp  data-structures.hpp  fec.hpp  protocol.hpp
src/moonlight/reedsolomon/: rs.c  rs.h
src/moonlight/rtsp/: parser.hpp  rtsp.c  rtsp.h
src/rust/gst-plugin-wayland-display/: build.rs
src/rust/gst-wayland-display/: CMakeLists.txt  Cargo.toml
src/rust/gst-wayland-display/include/: waylanddisplay.h
src/rust/gst-wayland-display/src/: lib.rs
src/streaming/: CMakeLists.txt
src/streaming/streaming/: data-structures.hpp  streaming.cpp  streaming.hpp  virtual-display.hpp  wayland-display.cpp  wayland-display.hpp
src/streaming/streaming/gst-plugin/: audio.hpp  gstrtpmoonlightpay.cpp  gstrtpmoonlightpay.hpp  gstrtpmoonlightpay_audio.cpp  gstrtpmoonlightpay_audio.hpp  gstrtpmoonlightpay_video.cpp  gstrtpmoonlightpay_video.hpp  utils.hpp  video.hpp
src/wolf/: CMakeLists.txt  wolf.cpp
src/wolf/control/: control.cpp  control.hpp  packet_utils.hpp
src/wolf/helpers/: logger.hpp  utils.hpp
src/wolf/process/: process.cpp  process.hpp
src/wolf/rest/: custom-https.cpp  endpoints.cpp  endpoints.hpp  helpers.cpp  helpers.hpp  rest.hpp  servers.cpp
src/wolf/rtp/: udp-ping.cpp  udp-ping.hpp
src/wolf/rtsp/: commands.hpp  net.cpp  net.hpp  rtsp.cpp  utils.hpp
src/wolf/runners/: docker.hpp  process.cpp  process.hpp
src/wolf/state/: config.hpp  configJSON.cpp  configTOML.cpp  data-structures.hpp  sessions.hpp
src/wolf/state/default/: config.include.toml  config.v2.toml
tests/: CMakeLists.txt  main.cpp  simple-pair.cpp  testControl.cpp  testCrypto.cpp  testExceptions.cpp  testGSTPlugin.cpp  testJoypads.cpp  testMoonlight.cpp  testRTSP.cpp  testSerialization.cpp  testWolfAPI.cpp  testlib.cpp
tests/assets/: config.json  config.test.toml  config.toml  config.v2.toml  server_info_response.xml
tests/docker/: testDocker.cpp
(+118 files in other folders)
