[workspace]
members = ["src/core/rust/gst-wayland-display", "src/core/rust/gst-plugin-wayland-display"]

[workspace.dependencies]
gst = { version = "0.20", package = "gstreamer", features = ["v1_18"] }
gst-video = { version = "0.20", package = "gstreamer-video", features = ["v1_18"] }
tracing = "0.1.37"
once_cell = "1.17.0"
