[package]
name = "gst-plugin-wayland-display"
authors = ["Victoria Brekenfeld <git@drakulix.de>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GStreamer Wayland Compositor Src"
repository = "https://github.com/games-on-whales/wolf"
rust-version = "1.67"

[lib]
name = "gstwaylanddisplaysrc"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
static = []
capi = []
doc = []

[dependencies]
gst.workspace = true
gst-base = { version = "0.20", package = "gstreamer-base", features = ["v1_18"] }
gst-video.workspace = true
gst-wayland-display = { path = "../gst-wayland-display" }
tracing.workspace = true
once_cell.workspace = true
tracing-subscriber = "0.3.16"

[build-dependencies]
gst-plugin-version-helper = "0.7.5"

[package.metadata.capi]
min_version = "0.8.0"

[package.metadata.capi.header]
enabled = false

[package.metadata.capi.library]
install_subdir = "gstreamer-1.0"
versioning = false

[package.metadata.capi.pkg_config]
requires_private = "gstreamer-1.0, gstreamer-base-1.0, gstreamer-video-1.0, gobject-2.0, glib-2.0, gmodule-2.0"
